# AudioLang

./: .gitignore  README.md  blueprint-compiler.json  com.devhypercoder.audiolang.json  meson.build  python3-fsrs.json
data/: com.devhypercoder.audiolang.desktop.in  com.devhypercoder.audiolang.gschema.xml  com.devhypercoder.audiolang.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: audiolang.gresource.xml  audiolang.in  choose_dir.py  choose_dir.ui  db.py  feedback_window.py  feedback_window.ui  main.py  meson.build  utils.py  window.ui  word_guess.py  word_preview.py  word_preview.ui
src/ui/: choose_dir.blp  feedback_window.blp  window.blp  word_guess.blp  word_preview.blp
